# sbts

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  FilterRawBallots.js  Justfile  README.md  TabulateIndividualRankings.js  TabulateTeamBallots.js
amca-ranking/: RankSchools.js  package-lock.json
api/: package.json
autocomplete/: AutocompleteContext.ts  GroupCompetitorNames.ts  Helpers.ts  SetupTriggers.ts  package-lock.json
ballot/: LockBallot.gs  ValidateBallot.gs  ValidateBallot.ts  package-lock.json
ballot-entry/: package-lock.json  package.json  webpack.config.js
generator/: CacheHelper.ts  CreationMenu.ts  Helpers.ts  Menu.ts  PopulateBallotLinks.ts  SetupContext.ts  SetupTabulationFolder.ts  SheetLogger.ts  SimpleSetup.ts  Types.ts  appsscript.json  package-lock.json  tsconfig.json
master/: Analytics.ts  CacheHelper.ts  Context.ts  ControlPanel.ts  CreateTeamBallotFolders.gs  CreateTeamBallotFolders.ts  DetectNameTypos.ts  DisplayMatchResults.ts  EmailBallotFolderLinks.ts  FuzzySet.ts  Helpers.ts  PairTeams.ts  PopulateBallotLinks.ts  PopulateBallotSheets.ts  PublishTeamBallots.ts  README.md  RangeNames.gs  RangeNames.ts  SetupTabulationFolder.ts  SetupTriggers.ts  ShareTrialFolders.ts  SheetLogger.ts  TabSummaryHelpers.ts  TabulateIndividualBallots.ts  TabulateIndividualRedux.ts  TabulateTeamBallots.gs  TabulateTeamBallots.ts  (+6 more)
publisher/: Dockerfile  pyproject.toml
publisher/fanout/: index.ts  package-lock.json  package.json  tsconfig.json
publisher/publisher/: bucket.py  latex.py  main.py  utils.py
publisher/templates/: ballot.tex
(+103 files in other folders)
